--- a/index-dummy.css
+++ b/index-dummy.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   font: inherit;
 }
+
 :root {
   --primary: #0a2647;
   --secondary: #ffb100;
@@ -17,10 +18,12 @@
   --grey: #aaa;
   --light: #fff;
 }
+
 body {
   font-family: "Urbanist", sans-serif;
   background-color: var(--primary);
 }
+
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -32,14 +35,16 @@ body {
 .nav-link:hover {
   border-bottom: 2px solid var(--secondary);
   width: 93%;
-  transition: border-bottom 0.2s ease-in-out; /* Change the duration and timing function to your preference */
+  transition: border-bottom 0.2s ease-in-out;
+  /* Change the duration and timing function to your preference */
 }
 
 .nav-link.active {
   font-weight: bold;
   border-bottom: 2px solid var(--primary);
   width: 93%;
-  transition: border-bottom 0.2s ease-in-out; /* Change the duration and timing function to your preference */
+  transition: border-bottom 0.2s ease-in-out;
+  /* Change the duration and timing function to your preference */
 }
 
 .custom-border {
@@ -76,11 +81,9 @@ body {
   left: 0;
   width: 940px;
   height: 100%;
-  background-image: linear-gradient(
-    90deg,
-    var(--primary) 50%,
-    transparent 100%
-  );
+  background-image: linear-gradient(90deg,
+      var(--primary) 50%,
+      transparent 100%);
   z-index: 1;
   pointer-events: none;
 }
@@ -195,10 +198,12 @@ h5 {
   0% {
     transform: translateY(0);
   }
+
   100% {
     transform: translateY(-50%);
   }
 }
+
 /* end: Gallery Section */
 
 /* start: Breakpoints */
@@ -222,6 +227,7 @@ h5 {
   .gallery-images-box {
     padding-left: 100px;
   }
+
   .gallery-section::before {
     width: 720px;
   }
@@ -237,20 +243,21 @@ h5 {
     height: auto;
     padding: 48px 0 24px;
   }
+
   .gallery-images-box {
     padding-left: 0;
     margin-left: -300px;
     min-height: 700px;
   }
+
   .gallery-section::before {
-    background-image: linear-gradient(
-      180deg,
-      var(--primary) 40%,
-      transparent 100%
-    );
+    background-image: linear-gradient(180deg,
+        var(--primary) 40%,
+        transparent 100%);
     height: 500px;
   }
 }
+
 /* End: Breakpoints/ Hero Gallery Section */
 
 /* Start: What We Provide Section */
@@ -261,6 +268,7 @@ h5 {
   padding: 0 16px;
   margin: 48px auto;
 }
+
 .title {
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
@@ -269,12 +277,14 @@ h5 {
   color: var(--light);
   text-align: center;
 }
+
 .wrapper {
   display: flex;
   flex-direction: column;
   position: relative;
   grid-gap: 16px;
 }
+
 .card {
   padding: 24px;
   border-radius: 12px;
@@ -285,23 +295,28 @@ h5 {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
 }
+
 .card:nth-child(odd) {
   align-self: flex-end;
 }
+
 .card::before {
   content: "";
   position: absolute;
   top: 12px;
   border: 12px solid;
 }
+
 .card:nth-child(odd)::before {
   right: 100%;
   border-color: transparent var(--light) transparent transparent;
 }
+
 .card:nth-child(even)::before {
   left: 100%;
   border-color: transparent transparent transparent var(--light);
 }
+
 .card h3 {
   font-family: "lato", sans-serif;
   text-align: center;
@@ -310,6 +325,7 @@ h5 {
   margin-bottom: 10px;
   color: var(--secondary);
 }
+
 .card p {
   margin-bottom: 16px;
   color: var(--light);
@@ -317,10 +333,12 @@ h5 {
   font-size: 16px;
   font-family: "Rubik";
 }
+
 .card .time {
   font-size: 14px;
   color: var(--grey);
 }
+
 .card .dot {
   position: absolute;
   top: 16px;
@@ -329,12 +347,15 @@ h5 {
   border-radius: 50%;
   background: var(--secondary);
 }
+
 .card:nth-child(even) .dot {
   left: calc(100% + 22px);
 }
+
 .card:nth-child(odd) .dot {
   right: calc(100% + 22px);
 }
+
 .line {
   position: absolute;
   top: 16px;
@@ -349,32 +370,39 @@ h5 {
   .line {
     left: 12px;
   }
+
   .card:nth-child(odd) {
     align-self: flex-start;
   }
+
   .wrapper {
     padding-left: 42px;
   }
+
   .card:nth-child(even) .dot {
     right: calc(100% + 22px);
     left: unset;
   }
+
   .card:nth-child(even)::before {
     right: 100%;
     left: unset;
     border-color: transparent var(--light) transparent transparent;
   }
+
   .card {
     max-width: 100%;
   }
 }
 
 @media screen and (max-width: 420px) {
+
   .line,
   .card .dot,
   .card::before {
     display: none;
   }
+
   .wrapper {
     padding-left: 0;
   }
@@ -395,6 +423,7 @@ h5 {
   position: relative;
   font-family: "Rubik";
 }
+
 #row-milestone {
   width: 90%;
   display: flex;
@@ -405,11 +434,13 @@ h5 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
 .col {
   flex-basis: 22%;
   text-align: center;
   color: var(--light);
 }
+
 .counter-box {
   width: 100%;
   height: 100%;
@@ -422,6 +453,7 @@ h5 {
   backdrop-filter: blur(5px);
   opacity: 0.85;
 }
+
 h2 {
   font-size: 45px;
   display: inline-block;
@@ -430,6 +462,7 @@ h2 {
   font-family: "Rubik";
   font-weight: 500;
 }
+
 .counter-box .fa,
 .fa-solid {
   font-size: 40px;
@@ -446,6 +479,7 @@ h2 {
   background-size: cover;
   text-align: center;
 }
+
 .title-mentor {
   font-size: 36px;
   font-weight: 500;
@@ -456,21 +490,25 @@ h2 {
   padding-top: 2%;
   font-family: "Montserrat", sans-serif;
 }
+
 .subtitle-mentor {
   color: white;
   font-family: "lato", sans-serif;
   font-size: 24px;
 }
+
 .featured-mentors {
   justify-content: center;
   align-items: center;
 }
+
 .featured-mentor {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
+
 .card-feature {
   position: relative;
   width: 500px;
@@ -486,9 +524,11 @@ h2 {
   margin-right: 30px;
   border: solid 1px var(--primary);
 }
+
 .card-feature:hover {
   height: 700px;
 }
+
 .imgbox {
   position: relative;
   width: 100%;
@@ -496,10 +536,12 @@ h2 {
   transform: translateY(-80px);
   z-index: 99;
 }
+
 img {
   width: 100%;
   border-radius: 10px;
 }
+
 .content {
   padding: 10px 20px;
   text-align: center;
@@ -508,10 +550,12 @@ img {
   transition: 0.3s;
   font-family: "Rubik";
 }
-.card-feature:hover > .content {
+
+.card-feature:hover>.content {
   opacity: 1;
   transform: translateY(-300px);
 }
+
 .content h2 {
   color: #7f9ead;
   font-family: "lato", sans-serif;
@@ -524,9 +568,11 @@ img {
     margin: 10% 2%;
     justify-content: center;
   }
+
   .featured-mentor {
     flex-direction: column;
   }
+
   .title-mentor {
     font-size: 28px;
     font-weight: 600;
@@ -536,6 +582,7 @@ img {
     text-align: left;
     margin-left: 2%;
   }
+
   .subtitle-mentor {
     color: white;
     font-weight: 300;
@@ -545,6 +592,7 @@ img {
     font-size: 20px;
     font-family: "lato", sans-serif;
   }
+
   .card-feature {
     margin-left: auto;
     margin-top: 10%;
@@ -552,10 +600,12 @@ img {
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767.98px) {
+
   /* styles for large phones and portrait tablets */
   .featured-mentor {
     flex-direction: column;
   }
+
   .title-mentor {
     font-size: 36px;
     font-weight: 600;
@@ -564,20 +614,24 @@ img {
     padding-top: 5%;
     margin-right: 5%;
   }
+
   .subtitle-mentor {
     color: white;
     font-weight: 300;
   }
+
   .card-feature {
     margin-top: 10%;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px) {
+
   /* styles for landscape tablets and small laptops */
   .featured-mentor {
     flex-direction: column;
   }
+
   .title-mentor {
     font-size: 36px;
     font-weight: 600;
@@ -586,19 +640,24 @@ img {
     padding-top: 5%;
     margin-right: 5%;
   }
+
   .subtitle-mentor {
     color: white;
     font-weight: 300;
   }
+
   .card-feature {
     margin-top: 10%;
   }
 }
+
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
+
   /* styles for medium laptops and desktops */
   .featured-mentor {
     flex-direction: column;
   }
+
   .title-mentor {
     font-size: 36px;
     font-weight: 600;
@@ -607,14 +666,17 @@ img {
     padding-top: 5%;
     margin-right: 5%;
   }
+
   .subtitle-mentor {
     color: white;
     font-weight: 300;
   }
+
   .card-feature {
     margin-top: 10%;
   }
 }
+
 /* End: Mentor Section */
 
 /* Start Success stories  */
@@ -638,7 +700,7 @@ img {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   opacity: 0.9;
-  // border: solid 1px var(--secondary);
+  border: solid 1px var(--secondary);
 }
 
 .story-title {
@@ -713,6 +775,7 @@ img {
     flex-basis: 100%;
     margin: 10px 0;
   }
+
   .card-features {
     height: auto;
     margin: 10px 0;
@@ -724,10 +787,8 @@ img {
 /* Start Testimonials  */
 
 #testimonials {
-  background-image: linear-gradient(
-    rgba(13, 117, 202, 0.5),
-    var(--primary) 40%
-  );
+  background-image: linear-gradient(rgba(13, 117, 202, 0.5),
+      var(--primary) 40%);
   background-position: center;
   background-size: cover;
   text-align: center;
@@ -745,12 +806,14 @@ img {
   font-size: 36px;
   padding-top: 5%;
 }
+
 .wrapper {
   max-width: 1080px;
   margin: 50px auto;
   padding: 0px 20px;
   position: relative;
 }
+
 .wrapper .center-line {
   position: absolute;
   height: 100%;
@@ -760,15 +823,19 @@ img {
   top: 20px;
   transform: translateX(-50%);
 }
+
 .wrapper .row {
   display: flex;
 }
+
 .wrapper .row-1 {
   justify-content: flex-start;
 }
+
 .wrapper .row-2 {
   justify-content: flex-end;
 }
+
 .wrapper .row section {
   background: #fff;
   border-radius: 5px;
@@ -776,6 +843,7 @@ img {
   padding: 20px;
   position: relative;
 }
+
 .wrapper .row section::before {
   position: absolute;
   content: "";
@@ -786,12 +854,15 @@ img {
   z-index: -1;
   transform: rotate(45deg);
 }
+
 .row-1 section::before {
   right: -7px;
 }
+
 .row-2 section::before {
   left: -7px;
 }
+
 .row section .icon,
 .center-line .scroll-icon {
   position: absolute;
@@ -806,26 +877,31 @@ img {
   box-shadow: 0 0 0 4px #fff, inset 0 2px 0 rgba(0, 0, 0, 0.08),
     0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
+
 .center-line .scroll-icon {
   bottom: 0px;
   left: 50%;
   font-size: 25px;
   transform: translateX(-50%);
 }
+
 .row-1 section .icon {
   top: 15px;
   right: -60px;
 }
+
 .row-2 section .icon {
   top: 15px;
   left: -60px;
 }
+
 .row section .details,
 .row section .bottom {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .row section .details {
   font-size: 22px;
   font-weight: 600;
@@ -835,6 +911,7 @@ img {
   font-family: "latoregular", sans-serif;
   font-weight: 500;
 }
+
 .row section p {
   margin: 10px 0 17px 0;
   font-family: "latoregular", sans-serif;
@@ -856,25 +933,32 @@ img {
   .wrapper .center-line {
     left: 40px;
   }
+
   .wrapper .row {
     margin: 30px 0 3px 60px;
   }
+
   .wrapper .row section {
     width: 100%;
   }
+
   .row-1 section::before {
     left: -7px;
   }
+
   .row-1 section .icon {
     left: -60px;
   }
 }
+
 @media (max-width: 440px) {
+
   .wrapper .center-line,
   .row section::before,
   .row section .icon {
     display: none;
   }
+
   .wrapper .row {
     margin: 10px 0;
   }
